Sculpt mode crash - Sampling detail size (DYNTOPO) while having dyntopo toggled off crashes blender #72647

Closed
opened 2019-12-22 21:15:26 +01:00 by Vas · 8 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-21 17:23, hash: a0892bb690
Worked: (optional)

Short description of error

Its possible to use dyntopo eyedropper to sample detail size even if dyntopo is off
Doing so results in sudden crash
dyntopo crash.mp4

Exact steps for others to reproduce the error

  • Go to sculpt mode
  • make sure dyntopo is off
  • Go to dyntopo and change to "constant detail" to make eyedropper appear
  • use the dyntopo eyedropper to sample anywhere on the mesh with dyntopo off
  • Crash
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-21 17:23, hash: `a0892bb690` Worked: (optional) **Short description of error** Its possible to use dyntopo eyedropper to sample detail size even if dyntopo is off Doing so results in sudden crash [dyntopo crash.mp4](https://archive.blender.org/developer/F8240593/dyntopo_crash.mp4) **Exact steps for others to reproduce the error** - Go to sculpt mode - make sure dyntopo is off - Go to dyntopo and change to "constant detail" to make eyedropper appear - use the dyntopo eyedropper to sample anywhere on the mesh with dyntopo off - Crash
Author

Added subscriber: @Alumx

Added subscriber: @Alumx

Added subscriber: @ronsn

Added subscriber: @ronsn

Yes, I can confirm that. In Blender 2.81 it is not possible to use the eyedropper when Dyntopo is off.

––––––––––––––––––––––––––––

System Information
Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-19 23:46, hash: 110f1cb1d6

Worked in: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4

Yes, I can confirm that. In Blender 2.81 it is not possible to use the eyedropper when Dyntopo is off. –––––––––––––––––––––––––––– **System Information** Operating system: Linux-5.0.0-37-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-19 23:46, hash: `110f1cb1d6` Worked in: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4`

Added subscribers: @PabloDobarro, @rjg

Added subscribers: @PabloDobarro, @rjg

This comment was removed by @rjg

*This comment was removed by @rjg*

@PabloDobarro It seems this issue was introduced in 47645a8db6 and caused by a change of the poll function in SCULPT_OT_sample_detail_size. Previously the picker was properly disabled.


    BLI_ghashIterator_init(GHashIterator * ghi, GHash * gh) Line 1083	C
    BLI_gsetIterator_init(GSetIterator * gsi, GSet * gs) Line 246	C
    BKE_pbvh_bmesh_node_raycast_detail(PBVHNode * node, const float * ray_start, IsectRayPrecalc * isect_precalc, float * depth, float * r_edge_length) Line 1585	C
    sculpt_raycast_detail_cb(PBVHNode * node, void * data_v, float * tmin) Line 6881	C
    traverse_tree(node_tree * tree, void(*)(PBVHNode *, void *, float *) hcb, void * hit_data, float * tmin) Line 912	C
    BKE_pbvh_search_callback_occluded(PBVH * bvh, bool(*)(PBVHNode *, void *) scb, void * search_data, void(*)(PBVHNode *, void *, float *) hcb, void * hit_data) Line 972	C
    BKE_pbvh_raycast(PBVH * bvh, void(*)(PBVHNode *, void *, float *) cb, void * data, const float * ray_start, const float * ray_normal, bool original) Line 1781	C
    sample_detail_dyntopo(bContext * C, ViewContext * vc, ARegion * ar, int mx, int my) Line 8533	C
    sample_detail(bContext * C, int mx, int my, int mode) Line 8563	C
    sculpt_sample_detail_size_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 8601	C
    wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2192	C
    wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2960	C
    wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3008	C
    wm_event_do_handlers(bContext * C) Line 3387	C
    WM_main(bContext * C) Line 420	C
    main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C
@PabloDobarro It seems this issue was introduced in 47645a8db6 and caused by a change of the poll function in `SCULPT_OT_sample_detail_size`. Previously the picker was properly disabled. ``` ``` ``` BLI_ghashIterator_init(GHashIterator * ghi, GHash * gh) Line 1083 C BLI_gsetIterator_init(GSetIterator * gsi, GSet * gs) Line 246 C BKE_pbvh_bmesh_node_raycast_detail(PBVHNode * node, const float * ray_start, IsectRayPrecalc * isect_precalc, float * depth, float * r_edge_length) Line 1585 C sculpt_raycast_detail_cb(PBVHNode * node, void * data_v, float * tmin) Line 6881 C traverse_tree(node_tree * tree, void(*)(PBVHNode *, void *, float *) hcb, void * hit_data, float * tmin) Line 912 C BKE_pbvh_search_callback_occluded(PBVH * bvh, bool(*)(PBVHNode *, void *) scb, void * search_data, void(*)(PBVHNode *, void *, float *) hcb, void * hit_data) Line 972 C BKE_pbvh_raycast(PBVH * bvh, void(*)(PBVHNode *, void *, float *) cb, void * data, const float * ray_start, const float * ray_normal, bool original) Line 1781 C sample_detail_dyntopo(bContext * C, ViewContext * vc, ARegion * ar, int mx, int my) Line 8533 C sample_detail(bContext * C, int mx, int my, int mode) Line 8563 C sculpt_sample_detail_size_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 8601 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2192 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2960 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3008 C wm_event_do_handlers(bContext * C) Line 3387 C WM_main(bContext * C) Line 420 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ```

This issue was referenced by 4f70af34e0

This issue was referenced by 4f70af34e054ef42b0e9079d8d5fc8c6e2ac8c19
Pablo Dobarro self-assigned this 2019-12-24 15:56:02 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72647
No description provided.